--- a/src/App.css
+++ b/src/App.css
@@ -25,12 +25,12 @@
 .cards-container {
     padding: 20px;
 }
-.spinner-container {
+.large-container {
     height: 600px;
     width: 100%;
     background-color: 1890ff;
     text-align: center;
-    padding-top: 200px;
+    padding: 100px 200px;
 }
 .select-km {
     width: 50%;
